@@ -1,0 +1,20 @@
+[webvi]
+
+# streamplayer1 to streamplayer9 are alternative media players to be
+# used for streaming. The substring %s will be replaced by the stream
+# URL. The players are tried one by one starting from streamplayer1
+# until one of them succeeds playing the stream.
+#
+#streamplayer1 = vlc "%s"
+#streamplayer2 = totem "%s"
+#streamplayer3 = mplayer "%s"
+#streamplayer4 = xine "%s"
+
+# templatepath is path to the video service template directory
+templatepath = /usr/local/share/webvi/templates
+
+[site-youtube]
+
+# Limit the quality when streaming to make the playback smooth even if
+# the network connection is slow.
+stream-max-quality = 50
